<resources>
    <string name="app_name">BarberShopQueueSystem</string>
    <string name="action_settings">Settings</string>
    <string name="firebase_connection_url">https://barbershopqueuesystem.firebaseio.com/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="confirm_email">Confirm email</string>
    <string name="telephone">Telephone</string>
    <string name="confirm_telephone">Confirm telephone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_login_register">LoginRegisterActivity</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>

    <string name="facebook_app_id">1048480788579956</string>
    <string name="facebook_app_secret">9f0dd2f1ed8d0faa1e8e4542eca9cc09</string>
    <string name="twitter_app_key">TsKLfkX0mZxDdMSF2WV1RoRV9</string>
    <string name="twitter_app_secret">wsSJgjoNIUIN367sepGBWn4wi49CBMZ18iGoKakC42YIrfCwCP</string>
    <string name="sign_in_with_google">Sign in with Google+</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="term_conditions">By signing up you agree to our Terms of Service and Privacy Policy</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="confirm_password">Confirm password</string>
    <string name="auth_failed">Firebase authentication failed</string>
    <string name="title_activity_user_logged_in">UserLoggedIn</string>
</resources>
